CDS-868 Fix SonarCube critical issues in adl-serializer, measure-serv, mini-termserv, openehr-aom, openehr-ap, openehr-rm-domain, rm-skeleton, xml-binding and xml-serializer